Add dependencies; ignore Dr. Watson

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ docs/build/
 docs/site/
 
 ################################################################################
+#                                 Dr. Watson                                   #
+################################################################################
+
+data
+_research
+
+################################################################################
 #                               Jupyter Notebook                               #
 ################################################################################
 
