--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ docs/site/
 
 data
 _research
+plots
 
 ################################################################################
 #                               Jupyter Notebook                               #
