Implement model fitting

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
+Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 MultivariatePolynomials = "102ac46a-7ee4-5c85-9060-abc95bfdeaa3"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Queryverse = "612083be-0b0f-5412-89c1-4e7c75506a58"
