--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,8 @@ name = "HFSP"
 authors = ["Douglas G. Moore"]
 
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
